- Merged David's latest generalisation branch - Updated styles with ASU colors - Set waterfall chart so text won't wrap - Fixed bug with tool tips not showing - Refactored column names into config.yaml - Refactored column descriptions in config.yaml - Refactored application start date in to config.yaml - Applied ASU customisations as per meeting 12-10-2012 -- Renaming stopped to stopped paying -- Renaming a1p to New Applications -- Setting drill down order -- Creating admin and lead role with access to finances -- Creating user role with no access to finance but targets

--- a/public/stylesheets/print.css
+++ b/public/stylesheets/print.css
@@ -335,9 +335,7 @@ table a td th {
 }
 
 
-h1, h2, h3, h4 {
-    color: black;
-}
+
 
 .form td {
     color:black !important;
@@ -399,5 +397,12 @@ pre {
 
 .form input[type="text"], .form select {
     font-size: 8pt;
+}
+
+h1, h2, h3, h4 {
+    color: black !important;
+    a {
+      color: black !important;
+    }
 }
 
